# fountain

./: .gitattributes  Cargo.toml  README.md  cover_example.ppm  test.pbrt  test.ppm
benches/: bench_blocked_array.rs  render_benchmark.rs
data/: rounded_cube.ply
src/: aabb.rs  aac.rs  blocked_array.rs  bvh.rs  camera.rs  err_float.rs  fast_rand.rs  film.rs  fresnel.rs  geom.rs  geometry.rs  id_arena.rs  image.rs  integrator.rs  interaction.rs  lib.rs  light.rs  macros.rs  main.rs  material.rs  math.rs  medium.rs  mipmap.rs  morton.rs  primitive.rs  random.rs  reflection.rs  renderer.rs  renderer_old.rs  sampler.rs  sampling.rs  scene.rs  shape.rs  spectrum.rs
src/camera/: mod.rs
src/filter/: mod.rs
src/geometry/: bounds.rs  mod.rs  transform.rs
src/imageio/: exr.rs  mod.rs
src/integrator/: direct_lighting.rs  mod.rs  path.rs  whitted.rs
src/light/: diffuse.rs  distant.rs  infinite.rs  mod.rs  point.rs
src/loaders/: constructors.rs  mod.rs  pbrt.rs
src/material/: glass.rs  matte.rs  metal.rs  mirror.rs  mod.rs  plastic.rs
src/reflection/: bsdf.rs  microfacet.rs  mod.rs
src/sampler/: mod.rs  random.rs
src/scene/: mod.rs
src/shapes/: loop_subdiv.rs  mod.rs  sphere.rs  triangle.rs
src/spectrum/: mod.rs  spectrum2.rs
src/texture/: checkerboard.rs  image.rs  mapping.rs  mod.rs  uv.rs
tests/: furnace.rs  tri_watertight.rs
testscenes/: furnace_empty.pbrt
