[package]
name = "raytracer"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
rand = "0.6.5"
rand_xoshiro = "0.2.0"
rayon = "1.0.3"
bumpalo = "2.4.3"
partition = "0.1.1"
cgmath = "0.17.0"
smallvec = "0.6.10"
parking_lot = "0.8.0"

[dev-dependencies]
criterion = "0.2.11"
pretty_assertions = "0.6.1"

[profile.release]
debug=true
lto=true
codegen-units=1

[profile.bench]
lto=true
codegen-units=1

[[bench]]
name = "render_benchmark"
harness = false
