[package]
name = "raytracer"
version = "0.1.0"
authors = ["Alex Kofke <akofke@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
rand = "0.6.5"
rand_xoshiro = "0.2.0"
rayon = "1.0.3"
bumpalo = "2.4.3"
partition = "0.1.1"
cgmath = "0.17.0"
smallvec = "1.2.0"
parking_lot = "0.8.0"
bitflags = "1.2.1"
arrayvec = "0.4.10"
image = "0.23.0"
approx = "0.3.2"
tobj = "0.1.10"
indicatif = "0.11.0"
once_cell = "1.3.1"
anyhow = "1.0.26"
ndarray = "0.13.0"
pbrt-parser = { path = "../pbrt-parser" }
resize = "0.4.0"
exr = "0.7.3"
ply-rs = "0.1.2"

clap = { git = "https://github.com/clap-rs/clap/" } # TODO separate deps for bins

[dev-dependencies]
criterion = "0.3.1"
pretty_assertions = "0.6.1"

[profile.dev]
incremental=false  # needed to avoid const generics ICE

[profile.release]
debug=true
#lto=true
#codegen-units=1

[profile.bench]
debug=true
#lto=true
#codegen-units=1

[[bench]]
name = "render_benchmark"
harness = false
